header e nav responsivo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/feather-icons"></script>
     <title>Diego Web3r</title>
 </head>
 <body>
     <header>
         <div class="container">
+            <div class="logo-container">
+                <h3>Diego</h3>
+                <h3>Web3r</h3>
+            </div>
             <h2>Hello,</h2>
             <h1>I am Diego Weber</h1>
             <p>Aprendendo CSS e HTML com foco na transição de carreira. Sempre curioso para aprender, estudo garimpando conteudos pela web.
@@ -19,15 +24,22 @@
         </div>
     </header>
     <nav>
-        <img src="assets/logo.png" alt="Diego Weber Logo">
+        <!-- <img src="assets/logo.png" alt="Diego Weber Logo"> -->
+        <div class="logo-container">
+            <h3>Diego</h3>
+            <h3>Web3r</h3>
+        </div>
         <ul>
-            <a href="">Sobre mim</a>
-            <a href="">Serviços</a>
-            <a href="">Portfólio</a>
-            <a href="">Curriculo</a>
-            <a href="">Contato</a>
+            <a href=""><i data-feather="user"></i>Sobre mim</a>
+            <a href=""><i data-feather="briefcase"></i>Serviços</a>
+            <a href=""><i data-feather="image"></i>Portfólio</a>
+            <a href=""><i data-feather="list"></i>Curriculo</a>
+            <a href=""><i data-feather="send"></i>Contato</a>
         </ul>
     </nav>
     <section>OOOII</section>
+    <script>
+        feather.replace()
+        </script>
 </body>
 </html>
