Criando Sobre mim

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h3>Web3r</h3>
             </div>
             <h2>Hello,</h2>
-            <h1>I am Diego Weber</h1>
+            <h1 class="title-lgreen">I am Diego Weber</h1>
             <p>Aprendendo CSS e HTML com foco na transição de carreira. Sempre curioso para aprender, estudo garimpando conteudos pela web.
                 Atualmente trabalho na area financeira como Gerente de Relacionamentos e sou certificado Anbima CPA-20. Falo ingles e espanhol.
             </p>
@@ -37,7 +37,23 @@
             <a href=""><i data-feather="send"></i>Contato</a>
         </ul>
     </nav>
-    <section>OOOII</section>
+    <section class="about-me">
+
+        <div class="container">
+            <h1 class="title-lgreen">Sobre mim</h1>
+            <p>Mato Grossense de 29 anos, vivendo no Rio de Janeiro, atualmente trabalhando no mercado financeiro  certificado Anbima CPA 20, mas com desejos de transição de carreira para Desenvolvedor Web e Programador
+            Formado em contabilidade em 2014 pela Faculdades de Alta Floresta.
+            <br>Estudando HTML e CSS com Javascript no horizonte a curto prazo, no longo prazo o objetivo é evoluir para React, NodeJS, Vue e/ou Python
+            
+        </p>
+        </div>
+
+        <div class="img-container">
+            <img src="assets/IMG_2330.jpg" alt="Diego Weber">
+        </div>
+        
+
+    </section>
     <script>
         feather.replace()
         </script>
