Sobre mim img lines

--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
         </div>
 
         <div class="img-container">
+            <div class="line lgreen"></div>
+            <div class="line mgreen"></div>
             <img src="assets/IMG_2330.jpg" alt="Diego Weber">
         </div>
-        
-
     </section>
+
+
+
+
+
+
     <script>
         feather.replace()
         </script>
