Criação e melhorias nas areas de portfolio e CV

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <title>Diego Web3r</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -17,8 +19,10 @@
             </div>
             <h2>Hello,</h2>
             <h1 class="title-lgreen">I am Diego Weber</h1>
-            <p>Aprendendo CSS e HTML com foco na transição de carreira. Sempre curioso para aprender, estudo garimpando conteudos pela web.
-                Atualmente trabalho na area financeira como Gerente de Relacionamentos e sou certificado Anbima CPA-20. Falo ingles e espanhol.
+            <p>Aprendendo CSS e HTML com foco na transição de carreira. Sempre curioso para aprender, estudo garimpando
+                conteudos pela web.
+                Atualmente trabalho na area financeira como Gerente de Relacionamentos e sou certificado Anbima CPA-20.
+                Falo ingles e espanhol.
             </p>
             <button>Entre em contato</button>
         </div>
@@ -41,11 +45,13 @@
 
         <div class="container">
             <h1 class="title-lgreen">Sobre mim</h1>
-            <p>Mato Grossense de 29 anos, vivendo no Rio de Janeiro, atualmente trabalhando no mercado financeiro  certificado Anbima CPA 20, mas com desejos de transição de carreira para Desenvolvedor Web e Programador
-            Formado em contabilidade em 2014 pela Faculdades de Alta Floresta.
-            <br>Estudando HTML e CSS com Javascript no horizonte a curto prazo, no longo prazo o objetivo é evoluir para React, NodeJS, Vue e/ou Python
-            
-        </p>
+            <p>Mato Grossense de 29 anos, vivendo no Rio de Janeiro, atualmente trabalhando no mercado financeiro
+                certificado Anbima CPA 20, mas com desejos de transição de carreira para Desenvolvedor Web e Programador
+                Formado em contabilidade em 2014 pela Faculdades de Alta Floresta.
+                <br>Estudando HTML e CSS com Javascript no horizonte a curto prazo, no longo prazo o objetivo é evoluir
+                para React, NodeJS, Vue e/ou Python
+
+            </p>
         </div>
 
         <div class="img-container">
@@ -54,14 +60,107 @@
             <img src="assets/IMG_2330.jpg" alt="Diego Weber">
         </div>
     </section>
+    <section class="services">
+        <h1 class="title-lgreen"> Serviços</h1>
+        <div class="services-container">
+            <div class="card">
+                <i data-feather="terminal"></i>
+                <h2>Desenvolvimento de Sites</h2>
+                <p>Desenvolvimento de WebSites empresariais. Faça sua empresa ser encontrada online.</p>
+            </div>
+            <div class="card">
+                <i data-feather="code"></i>
+                <h2>Desenvolvimento de Aplicações Web</h2>
+                <p>Desenvolvimento de aplicações web como sistemas de gerenciamento feitos sob medida.</p>
+            </div>
+            <div class="card">
+                <i data-feather="layout"></i>
+                <h2>Criação de Layouts</h2>
+                <p>Criação de protótipos de interfaces web e mobile para validar sua ideia antes da pratica.
+                </p>
+            </div>
+        </div>
+    </section>
 
+    <section class="portfolio">
+        <h1 class="title-lgreen">Portfolio</h1>
+        <div class="portfolio-container">
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <div class="line lgreen"></div>
+                    <img src="assets/galaxy-bg.jpg" alt="Imagem do projeto">
+                </div>
+                <div class="language-container">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                    </ul>
+                </div>
+                <p><b>Linktree</b></p>
+                <p>Projeto desenvolvido como desafio no curso de introdução a programacao Tech Academy</p>
+            </div>
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <div class="line lgreen"></div>
+                    <img src="assets/galaxy-bg.jpg" alt="Imagem do projeto">
+                </div>
+                <div class="language-container">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                    </ul>
+                </div>
+                <p><b>Linktree</b></p>
+                <p>Projeto desenvolvido como desafio no curso de introdução a programacao Tech Academy</p>
+            </div>
+            <div class="portfolio-card">
+                <div class="img-container">
+                    <div class="line lgreen"></div>
+                    <img src="assets/galaxy-bg.jpg" alt="Imagem do projeto">
+                </div>
+                <div class="language-container">
+                    <ul>
+                        <li>html</li>
+                        <li>css</li>
+                    </ul>
+                </div>
+                <p><b>Linktree</b></p>
+                <p>Projeto desenvolvido como desafio no curso de introdução a programacao Tech Academy</p>
+            </div>
+        </div>
+    </section>
 
+    <section class="curriculum">
+        <h1 class="title-lgreen">
+            Curriculo
+        </h1>
+        <div class="container">
+            <img class="curriculum-img" src="assets/imagem.png">
+            <div class="content">
+                <div class="curriculum-info">
+                    <span>Nome</span><b>Diego Weber</b>
+                    <span>Idade</span><b>29 anos</b>
+                    <span>Formação</span><b>Ciencias Contabeis</b>
+                    <span>Cidade</span><b>Rio de Janeiro, RJ</b>
+                    <span>Telefone</span><b>21 9 0000-0000</b>
+                    <span>Email</span><b>diego.weber@contato.com.br</b>
+                    <span>Exp</span><b>html e css</b>
+                    <span>Idiomas</span><b>Inglês e espanhol</b>
+                </div>
+                <button class="sercondary-button">
+                    <img src="assets/Union.svg" alt="">
+                    Baixe meu curriculo completo
+                </button>
+            </div>
+        </div>
+    </section>
 
 
 
 
     <script>
         feather.replace()
-        </script>
+    </script>
 </body>
+
 </html>
