--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <button>Entre em contato</button>
         </div>
     </header>
+
     <nav>
         <!-- <img src="assets/logo.png" alt="Diego Weber Logo"> -->
         <div class="logo-container">
@@ -34,14 +35,15 @@
             <h3>Web3r</h3>
         </div>
         <ul>
-            <a href=""><i data-feather="user"></i>Sobre mim</a>
-            <a href=""><i data-feather="briefcase"></i>Serviços</a>
-            <a href=""><i data-feather="image"></i>Portfólio</a>
-            <a href=""><i data-feather="list"></i>Curriculo</a>
-            <a href=""><i data-feather="send"></i>Contato</a>
+            <a href="#aboutme"><i data-feather="user"></i>Sobre mim</a>
+            <a href="#services"><i data-feather="briefcase"></i>Serviços</a>
+            <a href="#portfolio"><i data-feather="image"></i>Portfólio</a>
+            <a href="#curriculum"><i data-feather="list"></i>Curriculo</a>
+            <a href="#contact"><i data-feather="send"></i>Contato</a>
         </ul>
     </nav>
-    <section class="about-me">
+
+    <section id="aboutme" class="about-me">
 
         <div class="container">
             <h1 class="title-lgreen">Sobre mim</h1>
@@ -60,7 +62,8 @@
             <img src="assets/IMG_2330.jpg" alt="Diego Weber">
         </div>
     </section>
-    <section class="services">
+
+    <section id="services" class="services">
         <h1 class="title-lgreen"> Serviços</h1>
         <div class="services-container">
             <div class="card">
@@ -82,7 +85,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <section id="portfolio" class="portfolio">
         <h1 class="title-lgreen">Portfolio</h1>
         <div class="portfolio-container">
             <div class="portfolio-card">
@@ -130,7 +133,7 @@
         </div>
     </section>
 
-    <section class="curriculum">
+    <section id="curriculum" class="curriculum">
         <h1 class="title-lgreen">
             Curriculo
         </h1>
@@ -155,6 +158,22 @@
         </div>
     </section>
 
+    <section id="contact" class="contact">
+        <h1>Vamos trabalhar juntos?</h1>
+        <p>Se voce gostou do meu trabalho e quer que eu tire sua ideia do papel ou faça parte do seu time, entre em
+            contato comigo!</p>
+            <button>Entre em contato</button>
+            <div class="social-media">
+                <a hreg=""><img src="assets/Vector.png"></a>
+                <a hreg=""><img src="assets/youtube.png"></a>
+                <a hreg=""><img src="assets/linkedin.png"></a>
+                <a hreg=""><img src="assets/whatsapp.png"></a>
+            </div>      
+    </section>
+
+    <footer>
+        <p>Made by Diego Weber  - 2023</p>
+    </footer>
 
 
 
